--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reports-dashboard",
+  "name": "mosh-reactjs-learning",
   "private": true,
   "version": "0.0.0",
   "type": "module",
